# stella-twin

./: .gitignore  Makefile  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: factory.py  memory.py  personality.py
backend/app/api/: chat.py  health.py
backend/data/: facts.txt  summary.txt
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/: Chat.tsx
frontend/lib/: api.ts
